fix bg color on ie

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -80,15 +80,20 @@ div.footer {
   }    
 }
 
+body {
+  background: $brown-00 !important;
+}
+
 
 main[role=main] {
   margin: 0;
   padding: 0;
   background-color: $brown-85;
-}
-
-body {
-  background: $brown-00 !important;
+  div.box_2 {
+    background-color: inherit;
+    margin: 0em 1em 0em 1em;
+    padding: 1em 0 1.5em 0;
+  }
 }
 
 span.Q {
@@ -118,12 +123,6 @@ div.slider-box {
   width: 100%;
 }
 
-
-div.box_2 {
-  margin: 0em 1em 0em 1em;
-  padding: 1em 0 1.5em 0;
-//  border: 1px solid $brown-60;
-}
 
 div.box_3 {
   border: 1px solid $brown-70;
