--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -147,6 +147,12 @@ $info-color: #a0d3e8;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
+$body-bg: $brown-85;
+$body-font-color: $brown-00;
+$body-font-family: $font-family-sans-serif;
+$body-font-weight: $font-weight-normal;
+$body-font-style: normal;
+
 // We use this to control font-smoothing
 // $font-smoothing: antialiased;
 
